<resources>
    <string name="app_name">Todo</string>
    <string name="productivity">Productivity</string>
    <string name="overall">Overall</string>
    <string name="completed">Completed</string>
    <string name="planned">Planned</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="recent_tasks">Recent tasks</string>
    <string name="about_the_task">About the task</string>
    <string name="on_going">Ongoing🔥</string>
    <string name="start_date">Start Date - End Date</string>
    <string name="date_title">Start Date - End Date</string>
    <string name="end_date">End Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority</string>
    <string name="comment">Comment</string>
    <string name="description">Description</string>
    <string name="demo_long_text">You can\'t verify email addresses from disposable email services (services that allow you to receive email at a temporary address that expires after a certain amount of time).</string>
    <string name="review">Reviews</string>
    <string name="create_new_task">Create new Task</string>
    <string name="task_name">Task Name</string>
    <string name="begin">Begin</string>
    <string name="time_character">--</string>
    <string name="create_task">Create Task</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="today">Today Task</string>
    <string name="confirm">Confirm</string>
    <string name="finish_task">Finish this task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="all_tasks">All Tasks</string>
    <string name="statistic">Productivity Statistic</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="day">Today</string>
    <string name="theme">Theme</string>
    <string name="login">Sign in</string>
    <string name="login_btn">Login</string>
    <string name="logni_hint">Your name</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="to">to</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="finished">Finished</string>
    <string name="not_finished">On Going</string>
    <string name="expired">Expired</string>
    <string name="finish_all_task">Congratulations! You have finished all tasks. Keep it up ! 🚀</string>
    <string name="calender">Calender</string>
    <string name="task_expired_chanel_name">Task Expired</string>
    <string name="task_expired_chanel_description">Notify when task is expired</string>
</resources>