<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUpSheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.Material3.BottomSheet"
            android:background="@drawable/signup_sheet_drawable"
            android:padding="15dp"
            app:behavior_peekHeight="0dp"
            app:behavior_hideable="true"
            app:behavior_draggable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="360dp"
                android:importantForAccessibility="no"
                android:padding="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/to_do_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/logni_hint"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_todo_username"
                android:drawablePadding="10dp"
                android:background="@drawable/signup_edittext_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_todo_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:textColor="@color/black"
                android:background="@drawable/signup_edittext_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:background="@drawable/ongoing_card_background"
                android:text="@string/login_btn"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/close_signup_sheet_btn"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>