<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="ui.viewmodel.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen_drawable"
        tools:context="ui.view.SignInFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:importantForAccessibility="no"
            android:padding="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/to_do_login"
            app:layout_constraintBottom_toTopOf="@id/titleContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="37dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:gravity="start|center_vertical"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/openSignUpSheetButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/open_sheet_btn_drawable"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_up" />
        </FrameLayout>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/logni_hint"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_todo_username"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edittext_drawable"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleContainer"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/login_edittext_drawable"
            android:drawableStart="@drawable/ic_todo_password"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/ongoing_card_background"
            android:text="@string/login_btn"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/bottomSheetAnchorView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <include
            android:id="@+id/bottomSheet"
            layout="@layout/signup_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@id/bottomSheetAnchorView"
            app:layout_anchorGravity="top" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>